행선지에서 어떤 역을 거치는지도 명시적으로 씀, 급행만 있거나, 완행만 있거나, 급행 완행 둘 다 있거나 되게. LineCircle에서 역 번호만 나오게, 역 번호/노선 둘 다 나오게, 노선만 나오게

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Korail";
+  font-weight: normal;
+  src: url("./fonts/KORAIL.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Korail_Condensed";
+  font-weight: normal;
+  src: url("./fonts/korail_Condensed.ttf") format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Korail", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
